2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* configure.ac: Bump version to 1.3.
	* configure: Regenerate.

2007-08-20  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-graphics.patch: Roll back word wrap fix (Sun bug
	6491856) for backwards-compatibility.

2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gcjwebplugin.cc (plugin_in_pipe_callback): Strip trailing
	newline from message.
	Fix debug message format.
	(plugin_send_message_to_appletviewer): Fix debug message format.
	* patches/icedtea-plugin.patch: Fix debug message formats.

2007-08-19  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am: Add logic to build gcjwebplugin.so.
	(ICEDTEA_PATCHES): Add patches/icedtea-plugin.patch.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* configure.ac: Add AC_PROG_CXX.  Remove gcc AC_PROG_CC default.
	* gcjwebplugin.cc: New file.
	* patches/icedtea-plugin.patch: New file.

2007-08-19  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Add patches/icedtea-libpng.patch.
	* patches/icedtea-libpng.patch: New file.

2007-08-17  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Updated for b18.
	* Makefile.in: Regenerated.
	* patches/icedtea-assembler_amd64.patch: Updated line numbers.
	* patches/icedtea-copy-plugs.patch: Updated line numbers.
	* patches/icedtea-debuginfo.patch: Updated line numbers.
	* patches/icedtea-buildfix.patch: Removed.

2007-08-16  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.

2007-08-16  Lillian Angel  <langel@redhat.com>

	* .hgignore: Removed generated files.
	* Makefile.am: Removed exception generation.
	* Makefile.in: Regenerated.
	* generated/java/nio/BufferOverflowException.java,
	* generated/java/nio/BufferUnderflowException.java,
	* generated/java/nio/InvalidMarkException.java,
	* generated/java/nio/ReadOnlyBufferException.java,
	* generated/java/nio/channels/AlreadyConnectedException.java,