@@ -1,5 +1,10 @@
 2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
+	* Makefile.am (EXTRA_DIST): Add gcjwebplugin.cc.
+	* Makefile.in: Regenerate.
+
+2007-08-20  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
 	* configure.ac: Bump version to 1.3.
 	* configure: Regenerate.
 
